fix: installer